--- a/fast2h5_new_s2e.ipynb
+++ b/fast2h5_new_s2e.ipynb
@@ -667,11 +667,12 @@
       "\n",
       "    #copy-paste from else block of the cell below\n",
       "    out_fast2xydat='PPROC-FAST2XY_2013.DAT'\n",
-      "    #$thepath = '/diskmnt/a/exflwgs03/lsamoylv/code/WPG-develop/samples/' \n",
+      "    #$datapath='/diskmnt/a/exflwgs03/lsamoylv/code/data';thepath = '/diskmnt/a/exflwgs03/lsamoylv/code/WPG-develop/samples/' \n",
       "    #@\n",
-      "    thepath ='/data/S2E/data/FELsource/'\n",
+      "    datapath='/data/S2E/data/';thepath ='/data/S2E/data/FELsource/'\n",
+      "    \n",
       "    fel_data_path='/pnfs/desy.de/exfel/disk/XFEL/2013/SIM/FAST/2013-EXFEL-S1-5keV-14GeV-LongPulse/'\n",
-      "    prop_dir=thepath+str(uuid.uuid4())\n",
+      "    prop_dir=datapath+'/'+str(uuid.uuid4())\n",
       "    mkdir_p(prop_dir)\n",
       "    os.chdir(thepath)\n",
       "\n",
@@ -723,14 +724,15 @@
       "else:\n",
       "    # typical command line parameters:\n",
       "    # fast2xy_new.py -i'PPROC-FAST2XY_2013_LP.DAT' --time-start=3. --skip-nslices=8 --zc-point-num=33 --jmax=2\n",
-      "    in_fast2xydat='PPROC-FAST2XY_2013_LP.DAT';trd1=3.;nskip=8;nzc=18;jmax=2\n",
+      "    in_fast2xydat='PPROC-FAST2XY_2013_LP.DAT';trd1=3.;nskip=8;nzc=25;jmax=2\n",
       "    \n",
       "    out_fast2xydat='PPROC-FAST2XY_2013.DAT'\n",
       "    #$\n",
-      "    thepath = '/diskmnt/a/exflwgs03/lsamoylv/code/WPG-develop/samples/' \n",
-      "    #@thepath ='/data/S2E/data/FELsource/'\n",
+      "    datapath='/diskmnt/a/exflwgs03/lsamoylv/code/data';thepath = '/diskmnt/a/exflwgs03/lsamoylv/code/WPG-develop/samples/' \n",
+      "    #@datapath='/data/S2E/data/';thepath ='/data/S2E/data/FELsource/'\n",
+      "    \n",
       "    fel_data_path='/pnfs/desy.de/exfel/disk/XFEL/2013/SIM/FAST/2013-EXFEL-S1-5keV-14GeV-LongPulse/'\n",
-      "    prop_dir=thepath+str(uuid.uuid4())\n",
+      "    prop_dir=datapath+'/'+str(uuid.uuid4())\n",
       "    mkdir_p(prop_dir)\n",
       "    os.chdir(thepath)\n",
       "\n",
@@ -759,9 +761,9 @@
       "        os.system('rm '+tmp_dir+'/*.*')\n",
       "    \n",
       "        print 'The result hdf5 file:  '+out_fname+'.h5 will be copied to '\n",
-      "        print prop_dir+'/'+ set_FELout_name('prop_in_',trd1)\n",
+      "        print prop_dir+'/'+ set_FELout_name('prop_in',trd1)+'.h5'\n",
       "        shutil.copy(os.path.join(work_dir,out_fname+'.h5'),\n",
-      "                    os.path.join(prop_dir,set_FELout_name('prop_in_',trd1)+'.h5'))\n",
+      "                    os.path.join(prop_dir,set_FELout_name('prop_in',trd1)+'.h5'))\n",
       "        trd1=trd2\n",
       "        os.chdir(thepath)"
      ],
@@ -772,8 +774,8 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Reading FEL data from: SASE1_5keV_14GeV_LP_FXY1_1001018.RES ...\n",
-        "The result hdf5 file :SASE1_5keV_14GeV_LP_FXY1_1001018_003.h5 will be copied to \n"
+        "Reading FEL data from: SASE1_5keV_14GeV_LP_FXY1_1001025.RES ...\n",
+        "The result hdf5 file:  SASE1_5keV_14GeV_LP_FXY1_1001025_003.h5 will be copied to "
        ]
       },
       {
@@ -781,8 +783,8 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "/diskmnt/a/exflwgs03/lsamoylv/code/WPG-develop/samples/0c17c4c5-6d5a-4b76-9cfd-5d2892239765/prop_in__003\n",
-        "Reading FEL data from: SASE1_5keV_14GeV_LP_FXY1_1001018.RES ..."
+        "/diskmnt/a/exflwgs03/lsamoylv/code/data/73f3a451-d5db-445e-b024-6d8e5b79883f/prop_in_003.h5\n",
+        "Reading FEL data from: SASE1_5keV_14GeV_LP_FXY1_1001025.RES ..."
        ]
       },
       {
@@ -790,7 +792,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "The result hdf5 file :SASE1_5keV_14GeV_LP_FXY1_1001018_012.h5 will be copied to \n"
+        "The result hdf5 file:  SASE1_5keV_14GeV_LP_FXY1_1001025_012.h5 will be copied to "
        ]
       },
       {
@@ -798,7 +800,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "/diskmnt/a/exflwgs03/lsamoylv/code/WPG-develop/samples/0c17c4c5-6d5a-4b76-9cfd-5d2892239765/prop_in__012\n"
+        "/diskmnt/a/exflwgs03/lsamoylv/code/data/73f3a451-d5db-445e-b024-6d8e5b79883f/prop_in_012.h5\n"
        ]
       }
      ],
@@ -808,19 +810,11 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "%tb"
+      "#%tb"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "No traceback available to show.\n"
-       ]
-      }
-     ],
+     "outputs": [],
      "prompt_number": 19
     },
     {
