--- a/fast2h5_new_s2e.ipynb
+++ b/fast2h5_new_s2e.ipynb
@@ -11,6 +11,22 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "# Contact L.Samoylova <liubov.samoylova@xfel.eu>, A.Buzmakov <buzmakov@gmail.com>\n",
+      "# SPB S2E simulation project, European XFEL Hamburg <www.xfel.eu>\n",
+      "# May 2014\n",
+      "# Wave optics software is based on \n",
+      "# SRW core library <https://github.com/ochubar/SRW>, and \n",
+      "# WPG framework <https://github.com/samoylv/WPG>"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 1
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "#$\n",
       "%pylab inline\n",
       "#Importing necessary modules:\n",
@@ -43,7 +59,7 @@
        ]
       }
      ],
-     "prompt_number": 20
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -64,7 +80,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 21
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -78,7 +94,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 22
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -95,7 +111,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 23
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -112,7 +128,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 24
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -136,7 +152,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 25
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
@@ -166,7 +182,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 26
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -190,7 +206,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 27
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
@@ -225,7 +241,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 28
+     "prompt_number": 10
     },
     {
      "cell_type": "code",
@@ -252,7 +268,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 29
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
@@ -319,7 +335,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 30
+     "prompt_number": 12
     },
     {
      "cell_type": "code",
@@ -372,7 +388,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 31
+     "prompt_number": 13
     },
     {
      "cell_type": "code",
@@ -475,7 +491,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 42
+     "prompt_number": 14
     },
     {
      "cell_type": "code",
@@ -531,7 +547,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 33
+     "prompt_number": 15
     },
     {
      "cell_type": "code",
@@ -560,7 +576,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 34
+     "prompt_number": 16
     },
     {
      "cell_type": "code",
@@ -623,7 +639,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 43
+     "prompt_number": 17
     },
     {
      "cell_type": "code",
@@ -632,6 +648,7 @@
       "def main():\n",
       "    from optparse import OptionParser\n",
       "    parser = OptionParser()\n",
+      "    parser.add_option(\"-o\", \"--output-dir\",          dest=\"out_dir\", help=\"Output directory\", )\n",
       "    parser.add_option(\"-i\", \"--input-parameter-file\",dest=\"in_fast2xydat\", help=\"Input fast2xy parameter file\", )\n",
       "    parser.add_option(\"-j\", \"--jmax\",                dest=\"jmax\", help=\"how many output pulses should be provided (1 by default)\", )\n",
       "    parser.add_option(\"-t\", \"--time-start\",          dest=\"trd1\", help=\"Start time value for reading the pulse, fs\")\n",
@@ -676,8 +693,7 @@
       "    datapath='/data/S2E/data/';thepath ='/data/S2E/data/FELsource/'\n",
       "    \n",
       "    fel_data_path='/pnfs/desy.de/exfel/disk/XFEL/2013/SIM/FAST/2013-EXFEL-S1-5keV-14GeV-LongPulse/'\n",
-      "    prop_dir=datapath+str(uuid.uuid4())\n",
-      "    mkdir_p(prop_dir)\n",
+      "    mkdir_p(out_dir)\n",
       "    os.chdir(thepath)\n",
       "\n",
       "\n",
@@ -706,16 +722,16 @@
       "        os.system('rm '+tmp_dir+'/*.*')\n",
       "    \n",
       "        print 'The result hdf5 file:  '+out_fname+'.h5 will be copied to '\n",
-      "        print prop_dir+'/'+ set_FELout_name('prop_in_',trd1)\n",
+      "        print out_dir+'/'+ set_FELout_name('prop_in_',trd1)\n",
       "        shutil.copy(os.path.join(work_dir,out_fname+'.h5'),\n",
-      "                    os.path.join(prop_dir,set_FELout_name('prop_in_',trd1)+'.h5'))\n",
+      "                    os.path.join(out_dir,set_FELout_name('prop_in_',trd1)+'.h5'))\n",
       "        trd1=trd2\n",
       "        os.chdir(thepath)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 36
+     "prompt_number": 19
     },
     {
      "cell_type": "code",
@@ -728,7 +744,7 @@
       "else:\n",
       "    # typical command line parameters:\n",
       "    # fast2xy_new.py -i'PPROC-FAST2XY_2013_LP.DAT' --time-start=3. --skip-nslices=8 --zc-point-num=33 --jmax=2\n",
-      "    in_fast2xydat='PPROC-FAST2XY_2013_LP.DAT';trd1=3.;nskip=8;nzc=25;jmax=2\n",
+      "    in_fast2xydat='PPROC-FAST2XY_2013_LP.DAT';trd1=3.;nskip=8;nzc=42;jmax=2\n",
       "    \n",
       "    out_fast2xydat='PPROC-FAST2XY_2013.DAT'\n",
       "    #$\n",
@@ -736,8 +752,9 @@
       "    #@datapath='/data/S2E/data/';thepath ='/data/S2E/data/FELsource/'\n",
       "    \n",
       "    fel_data_path='/pnfs/desy.de/exfel/disk/XFEL/2013/SIM/FAST/2013-EXFEL-S1-5keV-14GeV-LongPulse/'\n",
-      "    prop_dir=datapath+str(uuid.uuid4())\n",
-      "    mkdir_p(prop_dir)\n",
+      "    #$\n",
+      "    out_dir='/diskmnt/a/exflwgs03/lsamoylv/code/sim_data/FELsource'\n",
+      "    mkdir_p(out_dir)\n",
       "    os.chdir(thepath)\n",
       "\n",
       "    for idx in range(0,jmax):\n",
@@ -765,9 +782,9 @@
       "        os.system('rm '+tmp_dir+'/*.*')\n",
       "    \n",
       "        print 'The result hdf5 file:  '+out_fname+'.h5 will be copied to '\n",
-      "        print prop_dir+'/'+ set_FELout_name('prop_in',trd1)+'.h5'\n",
+      "        print out_dir+'/'+ set_FELout_name('prop_in',trd1)+'.h5'\n",
       "        shutil.copy(os.path.join(work_dir,out_fname+'.h5'),\n",
-      "                    os.path.join(prop_dir,set_FELout_name('prop_in',trd1)+'.h5'))\n",
+      "                    os.path.join(out_dir,set_FELout_name('prop_in',trd1)+'.h5'))\n",
       "        trd1=trd2\n",
       "        os.chdir(thepath)"
      ],
@@ -778,8 +795,8 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Reading FEL data from: SASE1_5keV_14GeV_LP_FXY1_1001025.RES ...\n",
-        "The result hdf5 file:  SASE1_5keV_14GeV_LP_FXY1_1001025_003.h5 will be copied to "
+        "Reading FEL data from: SASE1_5keV_14GeV_LP_FXY1_1001042.RES ...\n",
+        "The result hdf5 file:  SASE1_5keV_14GeV_LP_FXY1_1001042_003.h5 will be copied to "
        ]
       },
       {
@@ -787,8 +804,8 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "/diskmnt/a/exflwgs03/lsamoylv/code/data/eb4e8a6e-8c90-43ba-ab68-a63d8978f6d5/prop_in_003.h5\n",
-        "Reading FEL data from: SASE1_5keV_14GeV_LP_FXY1_1001025.RES ..."
+        "/diskmnt/a/exflwgs03/lsamoylv/code/sim_data/FELsource/prop_in_003.h5\n",
+        "Reading FEL data from: SASE1_5keV_14GeV_LP_FXY1_1001042.RES ..."
        ]
       },
       {
@@ -796,7 +813,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "The result hdf5 file:  SASE1_5keV_14GeV_LP_FXY1_1001025_012.h5 will be copied to "
+        "The result hdf5 file:  SASE1_5keV_14GeV_LP_FXY1_1001042_012.h5 will be copied to "
        ]
       },
       {
@@ -804,11 +821,11 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "/diskmnt/a/exflwgs03/lsamoylv/code/data/eb4e8a6e-8c90-43ba-ab68-a63d8978f6d5/prop_in_012.h5\n"
+        "/diskmnt/a/exflwgs03/lsamoylv/code/sim_data/FELsource/prop_in_012.h5\n"
        ]
       }
      ],
-     "prompt_number": 45
+     "prompt_number": 20
     },
     {
      "cell_type": "code",
