reading new option

--- a/fast2h5_new_s2e.ipynb
+++ b/fast2h5_new_s2e.ipynb
@@ -662,12 +662,17 @@
       "    (options, args) = parser.parse_args()\n",
       "    \n",
       "    if not options.in_fast2xydat:   # if filename is not given\n",
-      "        parser.error('Input parameter filename not given')\n",
+      "        parser.error('Input parameter filename is not specified')\n",
       "    else:\n",
       "        in_fast2xydat=options.in_fast2xydat\n",
       "   \n",
+      "    if not options.out_dir:   # if time value not given\n",
+      "        parser.error('Output directory is not specified')\n",
+      "    else:\n",
+      "        out_dir=options.out_dir\n",
+      "\n",
       "    if not options.trd1:   # if time value not given\n",
-      "        parser.error('Start time value not given')\n",
+      "        parser.error('Start time value is not specified')\n",
       "    else:\n",
       "        trd1=float(options.trd1)\n",
       "\n",
