--- a/fast2h5_new_s2e.ipynb
+++ b/fast2h5_new_s2e.ipynb
@@ -615,7 +615,7 @@
       "    fill_wf_history_detail(wf_struct)\n",
       "    f_in = open(fast2xydat,'r')\n",
       "    \n",
-      "    e_data =    numpy.loadtxt(os.path.join(tmp_dir,set_oname_2014(namg,'E'+str(1),ifb,nzc)+'.RES'))\n",
+      "    e_data =    numpy.loadtxt(set_oname_2014(namg,'E'+str(1),ifb,nzc)+'.RES')\n",
       "    #fwhm_data not defined \n",
       "    #fwhm_data = numpy.loadtxt(os.path.join(tmp_dir,set_oname_2014(namg,'FWHM'+str(nharm)+'_',ifb,0)+'0.RES'))\n",
       "    #&pz_data_file = set_oname_2014(namg,'PZ'+str(nharm)+'_',ifb,0)+'0.RES'\n",
