some minor changes

--- a/fast2h5_new_s2e.ipynb
+++ b/fast2h5_new_s2e.ipynb
@@ -21,7 +21,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": "*"
     },
     {
      "cell_type": "code",
@@ -46,20 +46,14 @@
       "#Import base wavefront class\n",
       "from wpg import Wavefront\n",
       "\n",
+      "fel_data_path='/pnfs/desy.de/exfel/disk/XFEL/2013/SIM/FAST/2013-EXFEL-S1-5keV-14GeV-LongPulse/'\n",
+      "\n",
       "doPrint = False"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "Populating the interactive namespace from numpy and matplotlib\n"
-       ]
-      }
-     ],
-     "prompt_number": 2
+     "outputs": [],
+     "prompt_number": "*"
     },
     {
      "cell_type": "code",
@@ -80,7 +74,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": "*"
     },
     {
      "cell_type": "code",
@@ -94,7 +88,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 4
+     "prompt_number": "*"
     },
     {
      "cell_type": "code",
@@ -111,7 +105,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 5
+     "prompt_number": "*"
     },
     {
      "cell_type": "code",
@@ -128,7 +122,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 6
+     "prompt_number": "*"
     },
     {
      "cell_type": "code",
@@ -152,7 +146,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 7
+     "prompt_number": "*"
     },
     {
      "cell_type": "code",
@@ -182,7 +176,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 8
+     "prompt_number": "*"
     },
     {
      "cell_type": "code",
@@ -206,7 +200,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 9
+     "prompt_number": "*"
     },
     {
      "cell_type": "code",
@@ -241,7 +235,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 10
+     "prompt_number": "*"
     },
     {
      "cell_type": "code",
@@ -268,7 +262,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 11
+     "prompt_number": "*"
     },
     {
      "cell_type": "code",
@@ -335,7 +329,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 12
+     "prompt_number": "*"
     },
     {
      "cell_type": "code",
@@ -388,7 +382,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 13
+     "prompt_number": "*"
     },
     {
      "cell_type": "code",
@@ -491,7 +485,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 14
+     "prompt_number": "*"
     },
     {
      "cell_type": "code",
@@ -547,7 +541,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 15
+     "prompt_number": "*"
     },
     {
      "cell_type": "code",
@@ -576,7 +570,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 16
+     "prompt_number": "*"
     },
     {
      "cell_type": "code",
@@ -618,10 +612,9 @@
       "    e_data =    numpy.loadtxt(set_oname_2014(namg,'E'+str(1),ifb,nzc)+'.RES')\n",
       "    #fwhm_data not defined \n",
       "    #fwhm_data = numpy.loadtxt(os.path.join(tmp_dir,set_oname_2014(namg,'FWHM'+str(nharm)+'_',ifb,0)+'0.RES'))\n",
-      "    #&pz_data_file = set_oname_2014(namg,'PZ'+str(nharm)+'_',ifb,0)+'0.RES'\n",
-      "    #&pz_data = numpy.loadtxt(fel_data_path+pz_data_file)\n",
-      "    pz_data_file = 'PZ'+str(ifb)+'.RES'\n",
-      "    pz_data = numpy.loadtxt(thepath+pz_data_file)\n",
+      "    pz_data_file = 'PZ'+str(ifb)+'.RES\n",
+      "    #@pz_data_file = set_oname_2014(namg,'PZ'+str(nharm)+'_',ifb,0)+'0.RES'\n",
+      "    pz_data = numpy.loadtxt(fel_data_path+pz_data_file)\n",
       "    wf_struct['history/parent/detail/misc']={\n",
       "                                             'FAST2XY_DAT':(f_in.readlines(),'s'),\n",
       "                                             'temporal_struct':(e_data,'f'),\n",
@@ -639,7 +632,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 17
+     "prompt_number": "*"
     },
     {
      "cell_type": "code",
@@ -697,7 +690,6 @@
       "    #@\n",
       "    datapath='/data/S2E/data/';thepath ='/data/S2E/data/FELsource/'\n",
       "    \n",
-      "    fel_data_path='/pnfs/desy.de/exfel/disk/XFEL/2013/SIM/FAST/2013-EXFEL-S1-5keV-14GeV-LongPulse/'\n",
       "    mkdir_p(out_dir)\n",
       "    os.chdir(thepath)\n",
       "\n",
@@ -736,7 +728,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 19
+     "prompt_number": "*"
     },
     {
      "cell_type": "code",
@@ -795,42 +787,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "Reading FEL data from: SASE1_5keV_14GeV_LP_FXY1_1001042.RES ...\n",
-        "The result hdf5 file:  SASE1_5keV_14GeV_LP_FXY1_1001042_003.h5 will be copied to "
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "/diskmnt/a/exflwgs03/lsamoylv/code/sim_data/FELsource/prop_in_003.h5\n",
-        "Reading FEL data from: SASE1_5keV_14GeV_LP_FXY1_1001042.RES ..."
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "The result hdf5 file:  SASE1_5keV_14GeV_LP_FXY1_1001042_012.h5 will be copied to "
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "/diskmnt/a/exflwgs03/lsamoylv/code/sim_data/FELsource/prop_in_012.h5\n"
-       ]
-      }
-     ],
-     "prompt_number": 20
+     "outputs": [],
+     "prompt_number": "*"
     },
     {
      "cell_type": "code",
@@ -840,7 +798,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": "*"
     },
     {
      "cell_type": "code",
@@ -850,7 +809,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": "*"
     },
     {
      "cell_type": "code",
@@ -858,7 +818,8 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": "*"
     }
    ],
    "metadata": {}
