misprint in pz_data_file name

--- a/fast2h5_new_s2e.ipynb
+++ b/fast2h5_new_s2e.ipynb
@@ -21,7 +21,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": "*"
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -52,8 +52,16 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": "*"
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Populating the interactive namespace from numpy and matplotlib\n"
+       ]
+      }
+     ],
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -74,7 +82,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": "*"
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -88,7 +96,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": "*"
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -105,7 +113,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": "*"
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -122,7 +130,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": "*"
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -146,7 +154,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": "*"
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
@@ -176,7 +184,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": "*"
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -200,7 +208,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": "*"
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
@@ -235,7 +243,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": "*"
+     "prompt_number": 10
     },
     {
      "cell_type": "code",
@@ -262,7 +270,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": "*"
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
@@ -329,7 +337,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": "*"
+     "prompt_number": 12
     },
     {
      "cell_type": "code",
@@ -382,7 +390,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": "*"
+     "prompt_number": 13
     },
     {
      "cell_type": "code",
@@ -485,7 +493,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": "*"
+     "prompt_number": 14
     },
     {
      "cell_type": "code",
@@ -541,7 +549,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": "*"
+     "prompt_number": 15
     },
     {
      "cell_type": "code",
@@ -570,7 +578,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": "*"
+     "prompt_number": 16
     },
     {
      "cell_type": "code",
@@ -612,7 +620,7 @@
       "    e_data =    numpy.loadtxt(set_oname_2014(namg,'E'+str(1),ifb,nzc)+'.RES')\n",
       "    #fwhm_data not defined \n",
       "    #fwhm_data = numpy.loadtxt(os.path.join(tmp_dir,set_oname_2014(namg,'FWHM'+str(nharm)+'_',ifb,0)+'0.RES'))\n",
-      "    pz_data_file = 'PZ'+str(ifb)+'.RES\n",
+      "    pz_data_file = 'PZ'+str(ifb)+'.RES'\n",
       "    #@pz_data_file = set_oname_2014(namg,'PZ'+str(nharm)+'_',ifb,0)+'0.RES'\n",
       "    pz_data = numpy.loadtxt(fel_data_path+pz_data_file)\n",
       "    wf_struct['history/parent/detail/misc']={\n",
@@ -632,7 +640,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": "*"
+     "prompt_number": 17
     },
     {
      "cell_type": "code",
@@ -728,7 +736,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": "*"
+     "prompt_number": 18
     },
     {
      "cell_type": "code",
@@ -787,8 +795,42 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": "*"
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Reading FEL data from: SASE1_5keV_14GeV_LP_FXY1_1001042.RES ...\n",
+        "The result hdf5 file:  SASE1_5keV_14GeV_LP_FXY1_1001042_003.h5 will be copied to "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "/diskmnt/a/exflwgs03/lsamoylv/code/sim_data/FELsource/prop_in_003.h5\n",
+        "Reading FEL data from: SASE1_5keV_14GeV_LP_FXY1_1001042.RES ..."
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "The result hdf5 file:  SASE1_5keV_14GeV_LP_FXY1_1001042_012.h5 will be copied to "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "/diskmnt/a/exflwgs03/lsamoylv/code/sim_data/FELsource/prop_in_012.h5\n"
+       ]
+      }
+     ],
+     "prompt_number": 19
     },
     {
      "cell_type": "code",
@@ -799,7 +841,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": "*"
+     "prompt_number": 20
     },
     {
      "cell_type": "code",
@@ -810,7 +852,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": "*"
+     "prompt_number": 21
     },
     {
      "cell_type": "code",
@@ -819,7 +861,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": "*"
+     "prompt_number": 21
     }
    ],
    "metadata": {}
