--- a/fast2h5_new_s2e.ipynb
+++ b/fast2h5_new_s2e.ipynb
@@ -27,16 +27,16 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "#$\n",
+      "#!S2E\n",
       "%pylab inline\n",
       "#Importing necessary modules:\n",
       "import sys\n",
       "import os\n",
       "import errno\n",
       "\n",
-      "#@sys.path.insert(0,'/data/S2E/packages/WPG')\n",
-      "#$\n",
-      "sys.path.insert(0,'..')\n",
+      "#S2Esys.path.insert(0,'/data/S2E/packages/WPG')\n",
+      "#!S2E\n",
+      "sys.path.insert(0,'../..')\n",
       "\n",
       "import shutil\n",
       "import uuid\n",
@@ -46,9 +46,16 @@
       "#Import base wavefront class\n",
       "from wpg import Wavefront\n",
       "\n",
+      "#LP\n",
+      "isLP = True\n",
       "fel_data_path='/pnfs/desy.de/exfel/disk/XFEL/2013/SIM/FAST/2013-EXFEL-S1-5keV-14GeV-LongPulse/'\n",
+      "nharm = 1\n",
       "\n",
-      "doPrint = False"
+      "doPrint = False     # switch on/off debug printing\n",
+      "# switch on/off copying results into FELsource/prop_in_XXX.h5 \n",
+      "#@doCopyRes = True\n",
+      "#$\n",
+      "doCopyRes = False  #switch on for S2E  "
      ],
      "language": "python",
      "metadata": {},
@@ -88,9 +95,9 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "def set_pzname_2014(namg,ifb,nz):\n",
+      "def set_pzname(namg,ifb):\n",
       "    # suppose that undulator position identifier, nz, has 2 digits\n",
-      "    name = namg+'PZ1_000'+str(ifb)+'000'\n",
+      "    name = namg+'PZ1_'+str(ifb)+'000'\n",
       "    return name"
      ],
      "language": "python",
@@ -459,7 +466,7 @@
       "        PZh == Energy in the radiation pulse versus undulator length (gain curve)\n",
       "        col[0] Sequential number of output point along undulator\n",
       "        col[1] Position along undulator [cm]\n",
-      "        col[2] Total energy in the radiation pulse for frequency harmonic h [J]\n",
+      "        col[2] Averaged power of the radiation pulse for frequency harmonic h [W]\n",
       "        col[3] Energy loss by electrons [J]\n",
       "        col[4:4+2*n] \n",
       "        -n\n",
@@ -598,7 +605,7 @@
       "    #loading data from text toe*.res file\n",
       "    nharm=1 # for fundamental\n",
       "    namt = 'FXY'+str(nharm)+'_'   # part of fast2xy.exe output file name \n",
-      "    print 'Reading FEL data from: '+ set_oname_2014(namg,namt,ifb,nzc)+'.RES ...'\n",
+      "    print 'Reading FEL data from:'+ set_oname_2014(namg,namt,ifb,nzc)+'.RES ...'\n",
       "    params, rows=parse_toe_file(set_oname_2014(namg,namt,ifb,nzc)+'.RES')\n",
       "    if doPrint: print '...done'\n",
       "\n",
@@ -617,15 +624,20 @@
       "    fill_wf_history_detail(wf_struct)\n",
       "    f_in = open(fast2xydat,'r')\n",
       "    \n",
-      "    e_data =    numpy.loadtxt(set_oname_2014(namg,'E'+str(1),ifb,nzc)+'.RES')\n",
-      "    #fwhm_data not defined \n",
-      "    #fwhm_data = numpy.loadtxt(os.path.join(tmp_dir,set_oname_2014(namg,'FWHM'+str(nharm)+'_',ifb,0)+'0.RES'))\n",
-      "    pz_data_file = 'PZ'+str(ifb)+'.RES'\n",
-      "    #@pz_data_file = set_oname_2014(namg,'PZ'+str(nharm)+'_',ifb,0)+'0.RES'\n",
+      "    e_data =    numpy.loadtxt(set_oname_2014(namg,'E'+str(nharm),ifb,nzc)+'.RES')\n",
+      "    ff_data = numpy.loadtxt(fel_data_path+set_oname_2014(namg,'F'+str(nharm)+'_',ifb,nzc)+'.RES')\n",
+      "    nf_data = numpy.loadtxt(fel_data_path+set_oname_2014(namg,'N'+str(nharm)+'_',ifb,nzc)+'.RES')\n",
+      "    if not isLP:\n",
+      "        #for LP fwhm_data not defined \n",
+      "        fwhm_data = numpy.loadtxt(os.path.join(tmp_dir,set_oname_2014(namg,'FWHM'+str(nharm)+'_',ifb,0)+'0.RES'))\n",
+      "    pz_data_file = set_pzname(namg,ifb)+'.RES'\n",
+      "    #set_oname_2014(namg,'PZ'+str(nharm)+'_',ifb,0)+'0.RES'\n",
       "    pz_data = numpy.loadtxt(fel_data_path+pz_data_file)\n",
       "    wf_struct['history/parent/detail/misc']={\n",
       "                                             'FAST2XY_DAT':(f_in.readlines(),'s'),\n",
       "                                             'temporal_struct':(e_data,'f'),\n",
+      "                                             'spot_size':(nf_data,'f'),\n",
+      "                                             'angular_distribution':(ff_data,'f'),\n",
       "                                             'gain_curve':(pz_data,'f'),\n",
       "                                             }\n",
       "                                             #'fwhm_curve':(fwhm_data,'f') #<- not defined for long pulse data\n",
@@ -647,6 +659,8 @@
      "collapsed": false,
      "input": [
       "def main():\n",
+      "    # typical command line parameters:\n",
+      "    # fast2xy_new.py -i'PPROC-FAST2XY_2013_LP.DAT' --time-start=3. --skip-nslices=8 --zc-point-num=33 --jmax=2\n",
       "    from optparse import OptionParser\n",
       "    parser = OptionParser()\n",
       "    parser.add_option(\"-o\", \"--output-dir\",          dest=\"out_dir\", help=\"Output directory\", )\n",
@@ -694,9 +708,9 @@
       "\n",
       "    #copy-paste from else block of the cell below\n",
       "    out_fast2xydat='PPROC-FAST2XY_2013.DAT'\n",
-      "    #$datapath='/diskmnt/a/exflwgs03/lsamoylv/code/data';thepath = '/diskmnt/a/exflwgs03/lsamoylv/code/WPG-develop/samples/' \n",
+      "    #!S2Ethepath = '/diskmnt/a/exflwgs03/lsamoylv/code/WPG-develop/samples/' \n",
       "    #@\n",
-      "    datapath='/data/S2E/data/';thepath ='/data/S2E/data/FELsource/'\n",
+      "    thepath ='/data/S2E/data/FELsource/'\n",
       "    \n",
       "    mkdir_p(out_dir)\n",
       "    os.chdir(thepath)\n",
@@ -726,10 +740,13 @@
       "        shutil.copy(in_fname+'.h5', os.path.join(work_dir,out_fname+'.h5'))\n",
       "        os.system('rm '+tmp_dir+'/*.*')\n",
       "    \n",
-      "        print 'The result hdf5 file:  '+out_fname+'.h5 will be copied to '\n",
-      "        print out_dir+'/'+ set_FELout_name('prop_in_',trd1)\n",
-      "        shutil.copy(os.path.join(work_dir,out_fname+'.h5'),\n",
-      "                    os.path.join(out_dir,set_FELout_name('prop_in_',trd1)+'.h5'))\n",
+      "        if doCopyRes:\n",
+      "            print 'The result hdf5 file  '+out_fname+'.h5 will be copied to '\n",
+      "            print out_dir+'/'+ set_FELout_name('prop_in',trd1)+'.h5'\n",
+      "            shutil.copy(os.path.join(work_dir,out_fname+'.h5'),\n",
+      "                        os.path.join(out_dir,set_FELout_name('prop_in',trd1)+'.h5'))\n",
+      "        else:\n",
+      "            print '... done'\n",
       "        trd1=trd2\n",
       "        os.chdir(thepath)"
      ],
@@ -749,15 +766,15 @@
       "else:\n",
       "    # typical command line parameters:\n",
       "    # fast2xy_new.py -i'PPROC-FAST2XY_2013_LP.DAT' --time-start=3. --skip-nslices=8 --zc-point-num=33 --jmax=2\n",
-      "    in_fast2xydat='PPROC-FAST2XY_2013_LP.DAT';trd1=3.;nskip=8;nzc=42;jmax=2\n",
+      "    in_fast2xydat='PPROC-FAST2XY_2013_LP.DAT';trd1=3.;nskip=8;nzc=15;jmax=2\n",
       "    \n",
       "    out_fast2xydat='PPROC-FAST2XY_2013.DAT'\n",
-      "    #$\n",
-      "    datapath='/diskmnt/a/exflwgs03/lsamoylv/code/data/';thepath = '/diskmnt/a/exflwgs03/lsamoylv/code/WPG-develop/samples/' \n",
-      "    #@datapath='/data/S2E/data/';thepath ='/data/S2E/data/FELsource/'\n",
+      "    #!S2E\n",
+      "    thepath = '/diskmnt/a/exflwgs03/lsamoylv/code/WPG-develop/samples/bp140523/' \n",
+      "    #S@Ethepath ='/data/S2E/data/FELsource/'\n",
       "    \n",
       "    fel_data_path='/pnfs/desy.de/exfel/disk/XFEL/2013/SIM/FAST/2013-EXFEL-S1-5keV-14GeV-LongPulse/'\n",
-      "    #$\n",
+      "    #!S2E\n",
       "    out_dir='/diskmnt/a/exflwgs03/lsamoylv/code/sim_data/FELsource'\n",
       "    mkdir_p(out_dir)\n",
       "    os.chdir(thepath)\n",
@@ -786,10 +803,13 @@
       "        shutil.copy(in_fname+'.h5', os.path.join(work_dir,out_fname+'.h5'))\n",
       "        os.system('rm '+tmp_dir+'/*.*')\n",
       "    \n",
-      "        print 'The result hdf5 file:  '+out_fname+'.h5 will be copied to '\n",
-      "        print out_dir+'/'+ set_FELout_name('prop_in',trd1)+'.h5'\n",
-      "        shutil.copy(os.path.join(work_dir,out_fname+'.h5'),\n",
-      "                    os.path.join(out_dir,set_FELout_name('prop_in',trd1)+'.h5'))\n",
+      "        if doCopyRes:\n",
+      "            print 'The result hdf5 file  '+out_fname+'.h5 will be copied to '\n",
+      "            print out_dir+'/'+ set_FELout_name('prop_in',trd1)+'.h5'\n",
+      "            shutil.copy(os.path.join(work_dir,out_fname+'.h5'),\n",
+      "                        os.path.join(out_dir,set_FELout_name('prop_in',trd1)+'.h5'))\n",
+      "        else:\n",
+      "            print '... done'\n",
       "        trd1=trd2\n",
       "        os.chdir(thepath)"
      ],
@@ -800,8 +820,8 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Reading FEL data from: SASE1_5keV_14GeV_LP_FXY1_1001042.RES ...\n",
-        "The result hdf5 file:  SASE1_5keV_14GeV_LP_FXY1_1001042_003.h5 will be copied to "
+        "Reading FEL data from:SASE1_5keV_14GeV_LP_FXY1_1001015.RES ...\n",
+        "... done"
        ]
       },
       {
@@ -809,8 +829,7 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "/diskmnt/a/exflwgs03/lsamoylv/code/sim_data/FELsource/prop_in_003.h5\n",
-        "Reading FEL data from: SASE1_5keV_14GeV_LP_FXY1_1001042.RES ..."
+        "Reading FEL data from:SASE1_5keV_14GeV_LP_FXY1_1001015.RES ..."
        ]
       },
       {
@@ -818,15 +837,14 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "The result hdf5 file:  SASE1_5keV_14GeV_LP_FXY1_1001042_012.h5 will be copied to "
+        "... done"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "\n",
-        "/diskmnt/a/exflwgs03/lsamoylv/code/sim_data/FELsource/prop_in_012.h5\n"
+        "\n"
        ]
       }
      ],
@@ -857,11 +875,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
+     "input": [
+      "#ff_data = numpy.loadtxt(fel_data_path+set_oname_2014(namg,'F'+str(nharm)+'_',ifb,nzc)+'.RES')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 22
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
      "input": [],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 21
+     "prompt_number": 22
     }
    ],
    "metadata": {}
