ipynb for consistency

--- a/fast2h5_new_s2e.ipynb
+++ b/fast2h5_new_s2e.ipynb
@@ -53,9 +53,10 @@
       "\n",
       "doPrint = False     # switch on/off debug printing\n",
       "# switch on/off copying results into FELsource/prop_in_XXX.h5 \n",
-      "#@doCopyRes = True\n",
-      "#$\n",
-      "doCopyRes = False  #switch on for S2E  "
+      "# switch on/off copying results into FELsource/prop_in_XXX.h5 \n",
+      "#S2EdoCopyRes = True    \n",
+      "#!S2E\n",
+      "doCopyRes = False\n"
      ],
      "language": "python",
      "metadata": {},
@@ -664,6 +665,7 @@
       "    from optparse import OptionParser\n",
       "    parser = OptionParser()\n",
       "    parser.add_option(\"-o\", \"--output-dir\",          dest=\"out_dir\", help=\"Output directory\", )\n",
+      "    parser.add_option(\"-f\", \"--file-id\",             dest=\"f_id\",     help=\"ID of the first of output files: FELsource_out_<ID+{0..JMAX-1}>\", )\n",
       "    parser.add_option(\"-i\", \"--input-parameter-file\",dest=\"in_fast2xydat\", help=\"Input fast2xy parameter file\", )\n",
       "    parser.add_option(\"-j\", \"--jmax\",                dest=\"jmax\", help=\"how many output pulses should be provided (1 by default)\", )\n",
       "    parser.add_option(\"-t\", \"--time-start\",          dest=\"trd1\", help=\"Start time value for reading the pulse, fs\")\n",
@@ -681,10 +683,15 @@
       "    else:\n",
       "        in_fast2xydat=options.in_fast2xydat\n",
       "   \n",
-      "    if not options.out_dir:   # if time value not given\n",
+      "    if not options.out_dir:   # if output directory not given\n",
       "        parser.error('Output directory is not specified')\n",
       "    else:\n",
       "        out_dir=options.out_dir\n",
+      "\n",
+      "    if not options.f_id:   # if time value not given\n",
+      "        f_id = 1 #default value\n",
+      "    else:\n",
+      "        f_id=int(float(options.f_id))\n",
       "\n",
       "    if not options.trd1:   # if time value not given\n",
       "        parser.error('Start time value is not specified')\n",
@@ -734,7 +741,9 @@
       "        os.chdir(tmp_dir)\n",
       "        in_fname=convert_fast2h5(fel_data_path,fast2xyexe,out_fast2xydat,namg,ifb,nzc)\n",
       "        out_fname=set_FELout_name(in_fname,trd1)\n",
-      "        if doPrint: print 'in_fname,out_fname:',in_fname,out_fname\n",
+      "        prop_in_fname = 'FELsource_out_'+str(f_id+idx).zfill(6)\n",
+      "        \n",
+      "        if doPrint: print 'in_fname,out_fname,prop_in_fname:',in_fname,out_fname,prop_in_fname\n",
       "        os.system('chmod a+rw '+ tmp_dir+'/*.*')    \n",
       "        \n",
       "        shutil.copy(in_fname+'.h5', os.path.join(work_dir,out_fname+'.h5'))\n",
@@ -742,10 +751,11 @@
       "    \n",
       "        if doCopyRes:\n",
       "            print 'The result hdf5 file  '+out_fname+'.h5 will be copied to '\n",
-      "            print out_dir+'/'+ set_FELout_name('prop_in',trd1)+'.h5'\n",
+      "            print out_dir+'/'+ prop_in_fname+'.h5'\n",
       "            shutil.copy(os.path.join(work_dir,out_fname+'.h5'),\n",
-      "                        os.path.join(out_dir,set_FELout_name('prop_in',trd1)+'.h5'))\n",
+      "                        os.path.join(out_dir,prop_in_fname+'.h5'))\n",
       "        else:\n",
+      "            print out_fname, prop_in_fname\n",
       "            print '... done'\n",
       "        trd1=trd2\n",
       "        os.chdir(thepath)"
@@ -753,7 +763,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 18
+     "prompt_number": 25
     },
     {
      "cell_type": "code",
@@ -766,16 +776,17 @@
       "else:\n",
       "    # typical command line parameters:\n",
       "    # fast2xy_new.py -i'PPROC-FAST2XY_2013_LP.DAT' --time-start=3. --skip-nslices=8 --zc-point-num=33 --jmax=2\n",
-      "    in_fast2xydat='PPROC-FAST2XY_2013_LP.DAT';trd1=3.;nskip=8;nzc=15;jmax=2\n",
+      "    in_fast2xydat='PPROC-FAST2XY_2013_LP.DAT';f_id=2;trd1=3.;nskip=8;nzc=25;jmax=2\n",
+      "    #!S2E\n",
+      "    out_dir='/diskmnt/a/exflwgs03/lsamoylv/code/sim_data/FELsource'\n",
       "    \n",
       "    out_fast2xydat='PPROC-FAST2XY_2013.DAT'\n",
       "    #!S2E\n",
       "    thepath = '/diskmnt/a/exflwgs03/lsamoylv/code/WPG-develop/samples/bp140523/' \n",
-      "    #S@Ethepath ='/data/S2E/data/FELsource/'\n",
+      "    #S2Ethepath ='/data/S2E/data/FELsource/'\n",
       "    \n",
       "    fel_data_path='/pnfs/desy.de/exfel/disk/XFEL/2013/SIM/FAST/2013-EXFEL-S1-5keV-14GeV-LongPulse/'\n",
-      "    #!S2E\n",
-      "    out_dir='/diskmnt/a/exflwgs03/lsamoylv/code/sim_data/FELsource'\n",
+      "    \n",
       "    mkdir_p(out_dir)\n",
       "    os.chdir(thepath)\n",
       "\n",
@@ -797,7 +808,9 @@
       "        os.chdir(tmp_dir)\n",
       "        in_fname=convert_fast2h5(fel_data_path,fast2xyexe,out_fast2xydat,namg,ifb,nzc)\n",
       "        out_fname=set_FELout_name(in_fname,trd1)\n",
-      "        if doPrint: print 'in_fname,out_fname:',in_fname,out_fname\n",
+      "        prop_in_fname = 'FELsource_out_'+str(f_id+idx).zfill(6)\n",
+      "        \n",
+      "        if doPrint: print 'in_fname,out_fname,prop_in_fname:',in_fname,out_fname,prop_in_fname\n",
       "        os.system('chmod a+rw '+ tmp_dir+'/*.*')    \n",
       "        \n",
       "        shutil.copy(in_fname+'.h5', os.path.join(work_dir,out_fname+'.h5'))\n",
@@ -805,10 +818,12 @@
       "    \n",
       "        if doCopyRes:\n",
       "            print 'The result hdf5 file  '+out_fname+'.h5 will be copied to '\n",
-      "            print out_dir+'/'+ set_FELout_name('prop_in',trd1)+'.h5'\n",
+      "            #print out_dir+'/'+ set_FELout_name('prop_in',trd1)+'.h5'\n",
+      "            print out_dir+'/'+ prop_in_fname+'.h5'\n",
       "            shutil.copy(os.path.join(work_dir,out_fname+'.h5'),\n",
-      "                        os.path.join(out_dir,set_FELout_name('prop_in',trd1)+'.h5'))\n",
+      "                        os.path.join(out_dir,prop_in_fname+'.h5'))\n",
       "        else:\n",
+      "            print out_fname, prop_in_fname\n",
       "            print '... done'\n",
       "        trd1=trd2\n",
       "        os.chdir(thepath)"
@@ -820,8 +835,17 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Reading FEL data from:SASE1_5keV_14GeV_LP_FXY1_1001015.RES ...\n",
-        "... done"
+        "Reading FEL data from:SASE1_5keV_14GeV_LP_FXY1_1001025.RES ...\n",
+        "SASE1_5keV_14GeV_LP_FXY1_1001025_003"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " FELsource_out_000002\n",
+        "... done\n",
+        "Reading FEL data from:SASE1_5keV_14GeV_LP_FXY1_1001025.RES ..."
        ]
       },
       {
@@ -829,26 +853,19 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Reading FEL data from:SASE1_5keV_14GeV_LP_FXY1_1001015.RES ..."
+        "SASE1_5keV_14GeV_LP_FXY1_1001025_012"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "\n",
-        "... done"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n"
+        " FELsource_out_000003\n",
+        "... done\n"
        ]
       }
      ],
-     "prompt_number": 19
+     "prompt_number": 27
     },
     {
      "cell_type": "code",
